force-app/main/default/objects/Transaction_Historical__c/Transaction_Historical__c.object-meta.xml
<CustomObject>
    <description>Consolidated historical data for transactions.</description>
    <label>Transaction Historical</label>
    <nameField>
        <displayFormat>TH-{0000}</displayFormat>
        <label>Transaction Historical Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions Historical</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>