force-app/main/default/objects/Transaction_Historical__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Place or store where be performed the transaction</description>
    <inlineHelpText>Place or store where be performed the transaction</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transactions Historical</relationshipLabel>
    <relationshipName>Transactions_Historical</relationshipName>
    <type>Lookup</type>
</CustomField>