force-app/main/default/objects/Transaction_Historical__c/fields/Billed_to__c.field-meta.xml
<CustomField>
    <fullName>Billed_to__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>To who will be billed the transaction.</description>
    <inlineHelpText>To who will be billed the transaction.</inlineHelpText>
    <label>Billed to</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transactions Historical (Billed to)</relationshipLabel>
    <relationshipName>Historical_Billed_to</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>