force-app/main/default/objects/Transaction_Historical__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The category of the transaction</description>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Transactions Historical</relationshipLabel>
    <relationshipName>Transactions_Historical</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>