force-app/main/default/objects/Transaction_Historical__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Use if the transaction is related to a special event.</description>
    <inlineHelpText>Use if the transaction is related to a special event.</inlineHelpText>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Transactions Historical</relationshipLabel>
    <relationshipName>Transactions_Historical</relationshipName>
    <type>Lookup</type>
</CustomField>