force-app/main/default/objects/Transaction_Historical__c/fields/It_is_debt__c.field-meta.xml
<CustomField>
    <fullName>It_is_debt__c</fullName>
    <description>Identify if the transaction is a debt.</description>
    <formula>Billed_to__c !=  Paid_By__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identify if the transaction is a debt.</inlineHelpText>
    <label>It is debt</label>
    <type>Checkbox</type>
</CustomField>