force-app/main/default/objects/Transaction_Historical__c/fields/Paid_By__c.field-meta.xml
<CustomField>
    <fullName>Paid_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To specify who paid the transaction.</description>
    <inlineHelpText>To specify who paid the transaction.</inlineHelpText>
    <label>Paid By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transactions Historical (Paid By)</relationshipLabel>
    <relationshipName>Historical_Paid_by</relationshipName>
    <type>Lookup</type>
</CustomField>