force-app/main/default/objects/Transaction_Historical__c/fields/Year_month__c.field-meta.xml
<CustomField>
    <fullName>Year_month__c</fullName>
    <description>Year month indicator</description>
    <formula>TEXT( Month__c ) &amp; &quot;-&quot; &amp; TEXT( Year__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Year month indicator</inlineHelpText>
    <label>Year-month</label>
    <type>Text</type>
</CustomField>